Mobile resizing media query
currently removes the image when sqhashed at 640px but the mobile inputs images is still showing when the screen is desktop size.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <body>
     <form class="form-wrapper">
       <div class="form-section">
+        <img
+          src="./assets/harmony-music-academy-logo.svg"
+          alt="Harmony Music Academy logo"
+        />
+
         <div class="form-field">
           <label for="email" class="form-label">Email*</label>
           <input
@@ -36,12 +41,14 @@
         <button type="submit" class="submit-btn">Sign up</button>
       </div>
 
-      <div class="form-section">
+      <div class="form-section hide-logo">
         <img
           src="./assets/harmony-music-academy-logo.svg"
           alt="Harmony Music Academy logo"
         />
       </div>
     </form>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
