--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <form class="form-wrapper">
       <div class="form-section">
         <img
+          class="mobile-show-logo"
           src="./assets/harmony-music-academy-logo.svg"
           alt="Harmony Music Academy logo"
         />
@@ -41,7 +42,7 @@
         <button type="submit" class="submit-btn">Sign up</button>
       </div>
 
-      <div class="form-section hide-logo">
+      <div class="form-section mobile-hide-logo">
         <img
           src="./assets/harmony-music-academy-logo.svg"
           alt="Harmony Music Academy logo"
