--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="form-field">
           <label for="email" class="form-label">Email*</label>
           <input
+            id="email"
             name="email"
             type="text"
             class="form-input"
@@ -24,7 +25,7 @@
         </div>
         <div class="form-field">
           <label for="level" class="form-label">Level*</label>
-          <select name="level" class="form-input">
+          <select id="level" name="level" class="form-input">
             <option value="basic">Basic</option>
             <option value="advanced">Advanced</option>
           </select>
@@ -32,6 +33,7 @@
         <div class="form-field">
           <label for="hoursPerWeek" class="form-label">Hours per week*</label>
           <input
+            id="hours-per-week"
             name="hours-per-week"
             type="number"
             class="form-input"
