created content validator for each data field

--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
           <input
             id="email"
             name="email"
-            type="text"
+            type="email"
             class="form-input"
             placeholder="Your email"
           />
         </div>
         <div class="form-field">
           <label for="level" class="form-label">Level*</label>
-          <select id="level" name="level" class="form-input">
+          <select
+            id="level"
+            name="level"
+            class="form-input"
+            placeholder="Choose level"
+          >
             <option value="basic">Basic</option>
             <option value="advanced">Advanced</option>
           </select>
         </div>
+
         <div class="form-field">
           <label for="hoursPerWeek" class="form-label">Hours per week*</label>
           <input
@@ -45,10 +51,8 @@
       </div>
 
       <div class="form-section mobile-hide-logo">
-        <img
-          src="./assets/harmony-music-academy-logo.svg"
-          alt="Harmony Music Academy logo"
-        />
+        <im />g src="./assets/harmony-music-academy-logo.svg" alt="Harmony Music
+        Academy logo" />
       </div>
     </form>
 
