Incomplete: changed the content validation check to throw errors instead alerts
changed the content validation check to throw errors instead alerts. currently styled to show a red input box when there is an error, but fails to display the error message as red text below the box, will be fixed in next commit.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
       </div>
 
       <div class="form-section mobile-hide-logo">
-        <im />g src="./assets/harmony-music-academy-logo.svg" alt="Harmony Music
-        Academy logo" />
+        <img
+          src="./assets/harmony-music-academy-logo.svg"
+          alt="Harmony Music Academy logo"
+        />
       </div>
     </form>
 
