--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             class="form-input"
             placeholder="Your email"
           />
+          <div id="email-error"></div>
         </div>
         <div class="form-field">
           <label for="level" class="form-label">Level*</label>
@@ -34,6 +35,7 @@
             <option value="basic">Basic</option>
             <option value="advanced">Advanced</option>
           </select>
+          <div id="level-error"></div>
         </div>
 
         <div class="form-field">
@@ -45,6 +47,7 @@
             class="form-input"
             placeholder="How many?"
           />
+          <div id="hoursPerWeek-error"></div>
         </div>
 
         <button type="submit" class="submit-btn">Sign up</button>
