--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form class="form-wrapper">
-      <div class="form-section">
+      <div id="results" class="form-section">
         <img
           class="mobile-show-logo"
           src="./assets/harmony-music-academy-logo.svg"
